fix page-wrap, placed footer only in the home, fix banner wrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,6 @@ body {
   padding: 100px;
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
   height: 100%;
   position: relative;
 }
