--- a/app/assets/stylesheets/pages/_songs_index.scss
+++ b/app/assets/stylesheets/pages/_songs_index.scss
@@ -1,3 +1,9 @@
+.cards-wrap {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
 .card-container {
   // display: flex;
   // flex-flow: row wrap;
